--- a/miniprogram/pages/index/index.less
+++ b/miniprogram/pages/index/index.less
@@ -54,3 +54,14 @@
         }
     }
 }
+.block{
+    padding-top: 10rpx;
+}
+
+.index-time{
+    display: inline-block;
+    padding: 5rpx 5rpx 0 0;
+    float: right;
+    font-size: 30rpx;
+    color: #545454;
+}
