--- a/miniprogram/app.less
+++ b/miniprogram/app.less
@@ -1,6 +1,8 @@
 /**app.wxss**/
 .container {
-  box-sizing: border-box;
-  padding: 0 10px 10px 10px;
+//   box-sizing: border-box;
+  padding: 0 10px 0px 10px;
   background-color: #f6f6f6;
 } 
+@import '/static/icon/icon.wxss';
+@import '/static/icon/icon-user.wxss';
