--- a/miniprogram/pages/cart/cart.less
+++ b/miniprogram/pages/cart/cart.less
@@ -4,11 +4,16 @@
 .tag{
     margin-left: 10px;
 }
+
 .t-dropdown-menu__bar{
     position: static !important;
 }
 .header-container{
     display: flex;
+    position: fixed;
+    z-index: 999;
+    width: 97%;
+    background-color: #ffffff;
     .header-title{
         flex: 3;
         .title-name{
@@ -37,40 +42,43 @@
         }
     } 
 }
-.index-list{
-    background-color: #ffffff;
-    padding: 5px;
-    border-radius: 5px;
-    margin: 5px 0 5px 0;
-    .list-item{
-        display: flex;
-        .title-content{
-            font-weight: 700;
-            font-size:small
-        }
-        .list-title{
-            flex: 4;
-            display: inline;
-        }
-        .index-price{
-            flex: 1;
-            .price-icon{
+.content-item{
+    padding-top: 100rpx;
+    .index-list{
+        background-color: #ffffff;
+        padding: 5px;
+        border-radius: 5px;
+        margin: 5px 0 5px 0;
+        .list-item{
+            display: flex;
+            .title-content{
                 font-weight: 700;
+                font-size:small
+            }
+            .list-title{
+                flex: 4;
+                display: inline;
+            }
+            .index-price{
+                flex: 1;
+                .price-icon{
+                    font-weight: 700;
+                }
             }
         }
-    }
-    .list-content{
-        padding: 7px 0;
-        .content-view{
-            font-weight: 200;
-            font-size: 14px;
-            letter-spacing:1px;
-            //多行显示
-            overflow: hidden;
-            display: -webkit-box;
-            -webkit-line-clamp: 2; // 显示2行
-            -webkit-box-orient: vertical;
-            word-break: break-all; 
+        .list-content{
+            padding: 7px 0;
+            .content-view{
+                font-weight: 200;
+                font-size: 14px;
+                letter-spacing:1px;
+                //多行显示
+                overflow: hidden;
+                display: -webkit-box;
+                -webkit-line-clamp: 2; // 显示2行
+                -webkit-box-orient: vertical;
+                word-break: break-all; 
+            }
         }
     }
 }
