--- a/miniprogram/pages/my/my.less
+++ b/miniprogram/pages/my/my.less
@@ -1,1 +1,104 @@
 /* pages/my/my.wxss */
+.my_container{
+    /* padding: 5rpx 10rpx 0 10rpx; */
+    position: relative;
+   }
+   .my_userinfo{
+     position: absolute;
+     width: 170rpx;
+     height: 170rpx;
+     background-color: white;
+     padding: 10rpx;
+     box-sizing: border-box;
+     border-radius: 85rpx;
+     left: 0;
+     right: 0;
+     top: 18%;
+     margin: auto;
+   }
+   .my_userinfo image{
+     width: 150rpx;
+     height: 150rpx;
+     border-radius: 75rpx;
+   }
+   .my_userinfo view {
+     color: white;
+     text-align: center;
+     margin-top: 20rpx;
+     font-size: 28rpx;
+   }
+   .icon-yonghu-yuan{
+     position: absolute;
+     top: 0;
+     left: 0;
+     font-size: 170rpx;
+   }
+   .my_foot{
+     position: relative;
+   }
+   .foot-container{
+     position: relative;
+     top: -30rpx;
+     border-top-left-radius: 25rpx;
+     border-top-right-radius: 25rpx;
+     background-color: white;
+     padding: 10rpx;
+   }
+   .foot-cross{
+     display: flex;
+     margin: 0 20rpx;
+   }
+   .cross-label{
+     flex: 1;
+     text-align: center;
+     margin-top: 30rpx;
+   }
+   .cross-label i {
+     background-color: #464646;
+     color: #d8b883;
+     font-size: 52rpx;
+     padding: 16rpx;
+     border-radius: 45rpx;
+   }
+   .cross-label view{
+     font-size: 22rpx;
+     font-weight: 530;
+     margin-top: 22rpx;
+   }
+   .about-us{
+     position: relative;
+     padding-bottom: 10rpx;
+     margin: 10px 54rpx 0 54rpx;
+     font-weight: 500;
+     border-bottom: 1px solid #dee1e6;
+   }
+   .about-us i {
+     position: absolute;
+     right: 0;
+     font-size: 40rpx;
+   }
+   
+   .commodity_screen {
+     width: 100%;
+     height: 100%;
+     position: fixed;
+     top: 0;
+     left: 0;
+     background: #000;
+     opacity: 0.2;
+     overflow: hidden;
+     z-index: 1000;
+     color: #fff;
+   }
+   /*对话框 */
+   .commodity_attr_box {
+     height: 300rpx;
+     width: 100%;
+     overflow: hidden;
+     position: fixed;
+     bottom: 0;
+     left: 0;
+     z-index: 2000;
+     background: #fff;
+     padding-top: 20rpx;
+   }
