--- a/miniprogram/pages/my/my.wxml
+++ b/miniprogram/pages/my/my.wxml
@@ -1,2 +1,56 @@
 <!--pages/my/my.wxml-->
-<text>pages/my/my.wxml</text>
+<view class="my_container" >
+  <view class="my_headerImg"> 
+    <image src="/static/images/background.jpg" style="width: 100%; background-color: #eeeeee;" mode="widthFix"></image>
+  </view>
+  <view class="my_userinfo" bindtap="getUerInfo">
+    <block>
+      <image src="{{users.avatarUrl}}" style="width: 100%; background-color: #eeeeee;z-index: 100;"></image>
+      <view>{{users.nickName}}</view>
+    </block>
+  </view>
+  <view class="my_foot">
+    <view class="foot-container">
+      <view class="foot-cross">
+        <view class="cross-label" bindtap="mywallpaper">
+          <i class="iconfont icon-faxian-yanjing"></i>
+          <view>我的帖子</view>
+        </view>
+        <view class="cross-label">
+          <i class="iconfont icon-caozuo-dianzan"></i>
+          <view>我的点赞</view>
+        </view>
+        <view class="cross-label">
+          <i class="iconfont icon-fenzu"></i>
+          <view>我的收藏</view>
+        </view>
+        <view class="cross-label" bindtap="aboutUs">
+          <i class="iconfont icon-shezhi"></i>
+          <view>关于我们</view>
+        </view>
+      </view>
+    </view>
+    <view class="foot-about">
+     <view class="about-us" bindtap="aboutUs">
+      关于我们
+      <i class="iconfont icon-more"></i>
+     </view>
+     <view class="about-us" bindtap="complaints">
+      意见反馈
+      <i class="iconfont icon-more"></i>
+     </view>
+     <view class="about-us" bindtap="contactUs">
+      联系客服
+      <i class="iconfont icon-more"></i>
+     </view>
+     <view class="about-us" bindtap="newVersion">
+      上新提醒
+      <i class="iconfont icon-more"></i>
+     </view>
+     <!-- <view class="about-us" bindtap="novels">
+      小说查询
+      <i class="iconfont icon-more"></i>
+     </view> -->
+    </view>
+  </view>
+</view>
