--- a/miniprogram/pages/detail/detail.less
+++ b/miniprogram/pages/detail/detail.less
@@ -49,5 +49,74 @@
         margin-top: 20rpx;
         background-color: #f6f6f6;
         border-radius: 15rpx;
+        .address-item{
+            display: flex;
+            padding: 5rpx 5rpx 5rpx 10rpx;
+            .item-line{
+                width: 10rpx;
+                margin-right: 10rpx;
+                background-color: #e1c0b1;
+            }
+            .item-name{
+                font-weight: 600;
+                margin-right: 10rpx;
+                font-size: 30rpx;
+            }
+            .item-small{
+                font-size: 25rpx;
+                line-height: 40rpx;
+            }
+        }
+        .address-detail{
+            padding-left: 15rpx;
+            padding-top: 10rpx;
+            padding-bottom: 20rpx;
+            font-size: 30rpx;
+        }
+    }
+    .detail-source{
+        background-color: #f6f6f6;
+        border-radius: 15rpx;
+        margin-top: 30rpx;
+        padding: 10rpx;
+        display: flex;
+        .source-icon{
+            margin: 0 20rpx 0 10rpx;
+            color: #e1c0b1;
+        }
+        .source-text{
+            flex: 1;
+            .text-title{
+                font-weight: 700;
+            }
+            .text-value{
+                color: #e1c0b1;
+            }
+        }
+    }
+    
+    .detail-notify{
+        background-color: #f6f6f6;
+        .detail-notifys{
+            border-radius: 15rpx;
+            margin-top: 30rpx;
+            padding: 10rpx;
+            display: flex;
+            .notify-icon{
+                margin: 0 20rpx 0 10rpx;
+                color: #e1c0b1;
+            }
+            .notify-text{
+                flex: 1;
+                .text-title{
+                    font-size: 27rpx;
+                    color: #e1c0b1;
+                }
+            }
+        }
+        .detail-tis{
+            padding: 14rpx 10rpx 10rpx 30rpx;
+            font-size: 25rpx;
+        }
     }
 }
