--- a/miniprogram/pages/detail/detail.wxml
+++ b/miniprogram/pages/detail/detail.wxml
@@ -45,6 +45,7 @@
         </view>
         <view class="address-detail">  
             <text class="detail-text">
+            工作内容
                 将商家指定的信息复制粘贴到朋友圈即可，操作简单，两分钟即可
                 工作过要求 
                 1、下午13:00到晚上2：00时间自由
