--- a/miniprogram/pages/detail/detail.less
+++ b/miniprogram/pages/detail/detail.less
@@ -39,7 +39,7 @@
                     line-height: 43rpx;
                 }
                 .browsing-time{
-                    font-size: 28rpx;
+                    font-size: 24rpx;
                     line-height: 43rpx;
                 }
             }
@@ -72,6 +72,7 @@
             padding-top: 10rpx;
             padding-bottom: 20rpx;
             font-size: 30rpx;
+            line-height: 50rpx;
         }
     }
     .detail-source{
