--- a/miniprogram/pages/detail/detail.wxml
+++ b/miniprogram/pages/detail/detail.wxml
@@ -78,4 +78,64 @@
         </view>
        <view class="detail-tis">添加商家联系信息未通过可能是商家正忙或人员已招满！</view>
     </view>
+    <view class="detail-footer">
+        <t-button  theme="primary" block size="large" bind:tap="showDialog">获取联系方式</t-button>
+    </view>
+    <t-dialog
+    visible="{{showWithInput}}"
+    title="带输入框对话框"
+    confirm-btn='确认按钮'
+    bind:confirm="closeDialog"
+  >
+    <view slot="content" class="dialog-content">
+        <view class="content-image">
+            <view class="image-icon">
+                <t-icon name="logo-qq" size="48rpx" data-name="logo-qq" bind:click="onIconTap" />
+            </view>
+            <view class="image-title">
+                <view>QQ联系方式 </view>
+            </view>
+            <view class="image-btn">
+                <t-button variant="outline" theme="primary" size="small">点击复制</t-button>
+            </view>
+        </view>
+
+        <view class="content-image">
+            <view class="image-icon">
+                <t-icon name="logo-wechat" size="48rpx" data-name="logo-wechat" bind:click="onIconTap" />
+            </view>
+            <view class="image-title">
+                <view>微信联系方式 </view>
+            </view>
+            <view class="image-btn">
+                <t-button variant="outline" theme="primary" size="small">点击复制</t-button>
+            </view>
+        </view>
+
+        <view class="content-image">
+            <view class="image-icon">
+                <t-icon name="service" size="48rpx" data-name="service" bind:click="onIconTap" />
+            </view>
+            <view class="image-title">
+                <view>其他联系方式 </view>
+            </view>
+            <view class="image-btn">
+                <t-button variant="outline" theme="primary" size="small">点击复制</t-button>
+            </view>
+        </view>
+
+        <view class="content-image">
+            <view class="image-icon">
+                <t-icon name="image" size="48rpx" data-name="image" bind:click="onIconTap" />
+            </view>
+            <view class="image-title">
+                <view>图片联系方式 </view>
+            </view>
+            <view class="image-btn">
+                <t-button variant="outline" theme="primary" size="small">点击查看</t-button>
+            </view>
+        </view>
+
+    </view>
+  </t-dialog> 
 </view>
