--- a/miniprogram/pages/my/my.less
+++ b/miniprogram/pages/my/my.less
@@ -27,6 +27,13 @@
      margin-top: 20rpx;
      font-size: 28rpx;
    }
+   .user-vip{
+       width: 500rpx;
+       margin-left: -100%;
+       span{
+           color: #e95713;
+       }
+   }
    .icon-yonghu-yuan{
      position: absolute;
      top: 0;
