--- a/miniprogram/pages/my/my.less
+++ b/miniprogram/pages/my/my.less
@@ -1,4 +1,15 @@
 /* pages/my/my.wxss */
+.dialog-content{
+    margin: auto;
+    text-align: center;
+    image{
+        width: 400rpx;
+        height: 400rpx;
+    }
+    span{
+        color: red;
+    }
+}
 .my_container{
     /* padding: 5rpx 10rpx 0 10rpx; */
     position: relative;
